--- a/tailwind.css
+++ b/tailwind.css
@@ -60,6 +60,28 @@
   opacity: .6;
 }
 
+.border-right:last-child .child{
+  padding-right: 1rem;
+  border-right: 1px solid white;
+}
+
 .shadow-card-product{
   box-shadow: 0px 0px 5px 2px rgb(0 0 0 / 7%);
+}
+
+.textTruncate{
+  overflow: hidden; 
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical; 
+}
+
+.scrollbarMinicart::-webkit-scrollbar {
+  width: 4px;
+  display: block !important;
+}
+.scrollbarMinicart::-webkit-scrollbar-thumb {
+  background-color: #552086;
+  border-radius: 20px;
 }
